--- a/THE UKOL.html
+++ b/THE UKOL.html
@@ -17,9 +17,9 @@
     <h1>Lukáš je neschopnej</h1>
     <div>
         <p>Důvody proč Lukáš smrdí:</p>
-        <p>je asiat🦨</p>
+        <p>je asiat😺</p>
         <p>lukás je adoptovanej</p>
-        <img src="Borila.jpg" alt="">
+        <img src="stažený soubor.webp" alt="">
     </div>
     
 
