--- a/THE UKOL.html
+++ b/THE UKOL.html
@@ -8,18 +8,23 @@
         h1 {
     color: blueviolet;
     }
-    div {
+    .nevim {
+        background-color: cornflowerblue;
         color: rgb(69, 37, 97);
+        justify-content: center;
+        align-items: center;
+        border: 2px solid black;
     }
     </style>
 </head>
 <body>
     <h1>Lukáš je neschopnej</h1>
-    <div>
+    <div class="nevim">
         <p>Důvody proč Lukáš smrdí:</p>
         <p>je asiat🦨</p>
         <p>lukás je adoptovanej</p>
-        <img src="Borila.jpg" alt="">
+        <p>sorry ❤️‍🩹</p>
+        <img src="gorila.jpg" alt="">
     </div>
     
 
